<resources>
    <string-array name="tipo_usuario">
        <item>Tipo de Usuario</item>
        <item>Administrador</item>
        <item>Professor</item>
    </string-array>
    <string name="app_name">PrjUcb</string>
    <string name="app_versao">v%s</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="lembrar_credencial">Lembrar credenciais</string>
    <string name="cadastro_usuario">Cadastro de Usuário</string>
    <string name="consulta_usuario">Consulta Usuário</string>
    <string name="reservar_lab">Reservar Laboratório</string>
    <string name="consulta_agendamento">Consulta de Reservas</string>
    <string name="recursos">Recursos</string>
    <string name="gerir_usuarios">Gerência de Usuários</string>
    <string name="config">Configurações</string>
    <string name="tema">Modo %s</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="reservar">Reservar por Dia</string>
    <string name="reservar_periodo">Alocação por Período</string>
    <string name="sair">Sair</string>
    <string name="principal">Principal</string>
    <string name="noturno">Noturno</string>
    <string name="claro">Claro</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="usuario">Usuário</string>
    <string name="matricula">Matrícula</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="campo_nome">Nome: %s</string>
    <string name="campo_email">E-mail: %s</string>
    <string name="campo_usuario">Usuário: %s</string>
    <string name="campo_matricula">Matrícula: %s</string>
    <string name="campo_tipo_usuario">Tipo de Usuário: %s</string>
    <string name="professor">Professor</string>
    <string name="administrador">Administrador</string>
    <string name="voltar">Voltar</string>
    <string name="ok">OK</string>
    <string name="critica_tipoUsuario">Selecione um tipo de usuário!</string>
    <string name="critica_obrigatorioUsuario">Preencha o usuário!</string>
    <string name="critica_obrigatorioNome">Preencha o nome!</string>
    <string name="critica_obrigatorioEmail">Preencha o E-mail!</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
