<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login">
<ImageView
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:layout_marginTop="15dp"
    android:src="@drawable/logo_ucb"
    android:tint="?logoColor"/>
    <TextView
        android:id="@+id/login_tvVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:text="@string/app_versao"
        android:layout_marginBottom="20sp"/>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/login_edtLogin"
    android:paddingHorizontal="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textSize="15sp" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_edtSenha"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textSize="15sp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
<CheckBox
    android:id="@+id/login_checkCredencial"
    android:layout_marginTop="15dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    android:layout_marginLeft="10dp"
    android:text="@string/lembrar_credencial"/>

    <Button
        android:id="@+id/login_btnEntrar"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="@string/entrar"/>

    <TextView
        android:id="@+id/login_tvEsqueciSenha"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="@string/esqueci_senha"/>

</LinearLayout>