<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:id="@+id/cardview_gerir_usuarios"
    android:padding="10dp"
    app:cardCornerRadius="5dp"
    android:animateLayoutChanges="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/cardview_gerir_usuarios_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/campo_nome"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/cardview_gerir_usuarios_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/campo_usuario"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/cardview_gerir_usuarios_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/campo_email"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/cardview_gerir_usuarios_tipo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/campo_tipo_usuario"
        android:layout_marginBottom="5dp"/>
</LinearLayout>
</androidx.cardview.widget.CardView>