<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/principal_layout"
    tools:context=".Principal">
    <Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/principal_lnUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/custom_toolbar">
        <ImageView
            android:id="@+id/principal_iv_usuarios"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_gerir_usuarios" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/cadastro_usuario"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/custom_toolbar"
        android:layout_alignParentRight="true">
        <ImageView
            android:id="@+id/principal_iv_reservar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_reservar" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/reservar_lab"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/principal_lnUsuarios"
        android:layout_marginTop="25dp">
        <ImageView
            android:id="@+id/principal_iv_consultar_reserva"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/black"
            android:background="@drawable/ic_consulta_reserva" />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/consulta_agendamento"/>
    </LinearLayout>
</RelativeLayout>